--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
 <head></head>
 <body>
 	<div>
-	HEJ!
+	<button type="button" class="btn btn-primary" onclick="signIn();">Sing in with Google</button>
 	</div>
+
+	<script src="https://www.gstatic.com/firebasejs/3.5.2/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyAl4cpbN8-N6ClotlD9zW8d6amABc_AT24",
+    authDomain: "wishlist-b2ade.firebaseapp.com",
+    databaseURL: "https://wishlist-b2ade.firebaseio.com",
+    storageBucket: "wishlist-b2ade.appspot.com",
+    messagingSenderId: "921198736507"
+  };
+  firebase.initializeApp(config);
+</script>
+</script type="text/javascript" src="js/firebase.js"></script>
+
 </body>
 </html>
