--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   };
   firebase.initializeApp(config);
 </script>
-</script type="text/javascript" src="js/firebase.js"></script>
+<script type="text/javascript" src="js/firebase.js"></script>
 
 </body>
 </html>
