--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head></head>
 <body>
-	<div>
+	<div style="text-align: center">
 	<button type="button" class="btn btn-primary" onclick="signIn();">Sing in with Google</button>
 	</div>
 
+	<div style="text-align: center">
+		<h2 id="welcomeText"> </h2>
+	</div>
 	<script src="https://www.gstatic.com/firebasejs/3.5.2/firebase.js"></script>
 <script>
   // Initialize Firebase
