--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</div>
 
 	<div style="text-align: center">
-		<H2 id="welcomeText"></H2>
+		<H2 id="welcomeText">12</H2>
 	</div>
 	<script src="https://www.gstatic.com/firebasejs/3.5.2/firebase.js"></script>
 <script>
