--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</div>
 
 	<div style="text-align: center">
-		<h2 id="hejhej" >12</h2>
+		<h2 id="hejhej"></h2>
 	</div>
 	<script src="https://www.gstatic.com/firebasejs/3.5.2/firebase.js"></script>
 <script>
