--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head></head>
 <body>
-	<div style="text-align: center">
+	<div style="text-align: center" id="loginbox" >
 	<button type="button" class="btn btn-primary" onclick="signIn();">Sing in with Google</button>
 	</div>
 
