--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<div style="text-align: center">
 		<h2 id="hejhej">HEJ !!</h2>
 	</div>
-	<script src="https://www.gstatic.com/firebasejs/3.5.2/firebase.js"></script>
+
+<script src="https://www.gstatic.com/firebasejs/3.5.2/firebase.js"></script>
 <script>
   // Initialize Firebase
   var config = {
@@ -22,6 +23,7 @@
   firebase.initializeApp(config);
 </script>
 <script type="text/javascript" src="js/firebase.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 </body>
 </html>
