--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</div>
 
 	<div style="text-align: center">
-		<h2 id="hejhej">HEJ !!</h2>
+		<h2 id="welcomeText">HEJ !!</h2>
 	</div>
 
 <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase.js"></script>
