--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head></head>
+<head>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+</head>
 <body>
+	<nav class="navbar navbar-inverse">
+	<div class="container-fluid">
+		<div class="navbar-header">
+		  <a class="navbar-brand" href="#">Wishlist</a>
+		</div>
+		<ul class="nav navbar-nav">
+		  <li class="active"><a href="#">Home</a></li>
+		  <li><a href="#">Page 1</a></li>
+		  <li><a href="#">Page 2</a></li> 
+		  <li><a href="#">Page 3</a></li> 
+		</ul>
+		</div>
+	</nav>
+	
 	<div style="text-align: center" id="loginbox" >
 	<button type="button" class="btn btn-primary" onclick="signIn();">Sing in with Google</button>
 	</div>
 
 	<div style="text-align: center">
 		<h2 id="welcomeText">HEJ !!</h2>
+		<h2 id="welcomeText2"></h2>
 	</div>
 
 <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase.js"></script>
